Fixes z-index issue with burger menu

--- a/_src/less/menu.less
+++ b/_src/less/menu.less
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  z-index: 50;
 
   &-burger {
     width: @burger-width-sm;
